# pd-vamp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  pd-vamp.pd
.github/workflows/: c-cpp.yml
Resources/: vamp~-help.pd
Sources/: pd-vamp.cpp
